# SnowControl-a-Snowflake-Control-Tower

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: requirements.txt
apps/api/app/: analytics.py  auth.py  cli.py  db.py  ingest.py  main.py  models.py  repository.py  schemas.py  settings.py  snowflake.py
apps/api/tests/: test_analytics.py  test_api_server.py  test_auth.py  test_bulk_metrics.py  test_health.py  test_ingest.py
apps/web/: .eslintrc.cjs  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: client.test.ts  client.ts
apps/web/src/components/: DataTable.css  DataTable.tsx  KpiCard.css  KpiCard.test.tsx  KpiCard.tsx  LineChart.css  LineChart.tsx
apps/web/src/pages/: Anomalies.tsx  CostExplorer.tsx  Governance.tsx  Overview.test.tsx  Overview.tsx  Pages.css  QueryExplorer.tsx  Settings.tsx
apps/web/src/styles/: App.css  global.css
data/: SCHEMA.md  generate_demo_data.py  query_history_sample.csv  warehouse_metering_sample.csv
data/demo/: object_access.csv  query_history.csv  role_grants.csv  role_usage.csv  warehouse_metering.csv  warehouses.csv
docs/: CHANGELOG.md  DECISIONS.md  architecture.md  finops.md  governance.md  index.md  mkdocs.yml  quickstart.md  roadmap.md
docs/adr/: 0001-offline-first.md  0002-policy-engine.md  0003-state-backend.md
examples/acme_account/: README.md  desired.yaml  policies.yaml
scripts/: verify.sh
src/snowcontrol/: __init__.py  cli.py
src/snowcontrol/adapters/: snowflake_client.py
src/snowcontrol/config/: __init__.py  loader.py  schema.py
src/snowcontrol/core/: diff.py  models.py  plan.py  render_sql.py  state_backend.py
src/snowcontrol/core/policies/: builtin.py  engine.py  rules.py
src/snowcontrol/finops/: anomalies.py  ingest.py  metrics.py  report.py
src/snowcontrol/utils/: console.py  hashing.py  time.py
tests/: test_cli_smoke.py  test_config_loading.py  test_diff_engine.py  test_finops_reports.py  test_plan_render_sql.py  test_policy_engine.py  test_state_backend.py
