[project]
name = "snowcontrol"
version = "0.1.0"
description = "SnowControl: Snowflake Control Tower"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SnowControl Contributors"}]
keywords = ["snowflake", "finops", "governance", "iac"]
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
  "pydantic==2.8.2",
  "PyYAML==6.0.2",
  "rich==13.7.1",
  "typer==0.12.3",
]

[project.optional-dependencies]
# Optional connector support
snowflake = ["snowflake-connector-python==3.12.2"]
# Dev tooling
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "ruff==0.5.6",
  "mypy==1.11.1",
  "mkdocs-material==9.5.27",
  "types-PyYAML==6.0.12.20240808",
]

[project.scripts]
snowcontrol = "snowcontrol.cli:app"

[build-system]
requires = ["setuptools==72.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-q --cov=snowcontrol --cov-report=term-missing --cov-fail-under=85"

testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
