[project]
name = "frostsight"
version = "0.1.0"
description = "FrostSight: Snowflake Cost + Performance + Governance Control Plane"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "FrostSight Contributors"}]
classifiers = ["Programming Language :: Python :: 3.11"]

[build-system]
requires = ["setuptools==72.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
